<resources>
    <string name="app_name">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_successful">Login successful</string>
    <string name="clint_id">303241795575-5cllilo259eg8m94n3ph51ni6kri2nl3.apps.googleusercontent.com</string>
    <string name="memory_details">Memory Details</string>
    <string name="memory_title">Memory Title</string>
    <string name="add_memory">Add Memory</string>
    <string name="creating_db_message">Creating new database instance</string>
    <string name="getting_db_instance_message">Getting the database instance</string>
    <string name="memory_title">Memory Title</string>
    <string name="time_added">time added</string>
    <string name="memory_body">Memory body</string>
</resources>
