<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/memory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_title"
        android:layout_marginBottom="10dp"
        android:maxLines="2"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/memory_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/memory_title"
            android:text="@string/memory_body"/>

        <TextView
            android:id="@+id/time_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/memory_body"
            android:layout_alignParentEnd="true"
            android:text="@string/time_added"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</android.support.v7.widget.CardView>