<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddJournalActivity">

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="Add Memories"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/journal_title_text_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/add"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/journal_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/memory_title"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/journal_detail_text_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/journal_title_text_layout"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/journal_detail_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/memory_details"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_journal_button"
        android:layout_width="match_parent"
        android:onClick="insertMemory"
        android:layout_below="@+id/journal_detail_text_layout"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_form"
        android:text="@string/add_memory"
        tools:ignore="MissingPrefix" />


</RelativeLayout>